@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2020-02-05 (28)
+ - fix import and export of attempts to include timestart/modified while maintaining backwards compatability with previous export files
+
 2019-11-27 (27)
  - fix setting of quiz id when downloading books without quizzes on sites using the mreader.org API
 
